--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="URL">wss://spark-api.xf-yun.com/v1.1/chat</string>
 
 
-
     <!-- Login 登陆 -->
     <string name="login_title">登陆</string>
     <string name="login_email_hint">邮箱</string>
@@ -27,6 +26,12 @@
     <string name="already_have_account">已有账号？立即登录</string>
 
     <!-- MainPage 主页 -->
+    <string-array name="transaction_types">
+        <item>Income</item>
+        <item>Expense</item>
+    </string-array>
+
+
 
 
 </resources>
